Fix duration, avoid jumping for disappearing btns

--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -252,7 +252,7 @@
       height: 2px;
       background-color: $c-light;
       right: 0;
-      transition: width, $navigation-duration linear;
+      transition: width $navigation-duration linear;
 
       @media (min-width: $stop-scaling) {
         left: -5px;
@@ -274,7 +274,7 @@
 
     &.active {
       &::after {
-        transition: backgroung-color, $navigation-duration linear;
+        transition: backgroung-color $navigation-duration linear;
         width: 100%;
       }
     }
