--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -171,7 +171,9 @@
   border: 2px solid transparent;
   border-radius: 50%;
   transform: translateY(-10%);
-  transition: opacity 0.3s ease-out;
+  transition-property: opacity, transform;
+  transition-duration: 0.35s;
+  transition-timing-function: ease;
   opacity: 0;
 
   @media (min-width: $stop-scaling) {
