--- a/source/scss/general/mixins.scss
+++ b/source/scss/general/mixins.scss
@@ -62,7 +62,7 @@
 @mixin social-btn-appearing {
   .social-block__link {
     transition-property: all;
-    transition-duration: 0.3s;
+    transition-duration: 0.35s;
     transition-timing-function: ease;
     transform: translateY(0);
     opacity: 1;
