--- a/source/scss/general/variables.scss
+++ b/source/scss/general/variables.scss
@@ -20,4 +20,4 @@ $retina-dppx: 1.5dppx;
 
 $index: 1.38871;
 
-$navigation-duration: 0.3s;
+$navigation-duration: 0.35s;
